Added basic comment mechanism